--- a/newmaris.html
+++ b/newmaris.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Media Experiments (tangible and/or spatial)</title>
-    <link rel="stylesheet" href="styles.css">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap Icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <!-- Glossy Theme -->
+    <link rel="stylesheet" href="glossy-theme.css">
+    <link rel="stylesheet" href="./style.css">
   <style>
         /* Import DepartureMono font */
         @font-face {
@@ -109,6 +115,7 @@
             display: flex;
             padding: 40px;
             gap: 40px;
+            flex: 1; /* allow content to grow so footer sits at document bottom */
         }
 
         .left {
@@ -185,6 +192,14 @@
             display: block;
         }
 
+        /* Make the net-art (b8) gallery scrollable so long descriptions/iframe content can be scrolled
+           Match the metal-box max-height (400px) so visual height is consistent across galleries */
+        #b8-gallery .gallery-item {
+            max-height: 400px; /* same as metal-box */
+            overflow-y: auto;
+            padding-right: 12px; /* room for scrollbar */
+        }
+
         .gallery-description {
             margin-top: 10px;
             font-size: 1rem;
@@ -192,14 +207,7 @@
             text-align: left; /* Align text to the left */
         }
 
-        .footer {
-            background-color: #ffbcd0;
-            color: white;
-            text-align: center;
-            padding: 10px;
-            font-weight: bold;
-            margin-top: auto;
-        }
+    /* footer styling is managed centrally in style.css */
 
         .buttons {
             display: flex;
@@ -243,6 +251,30 @@
 
         .button:hover {
             box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.5), 0 6px 8px rgba(0, 0, 0, 0.2);
+        }
+
+        /* GIF-only button styles: remove background and visuals so only the gif shows */
+        .button img {
+            display: block;
+            width: 100%;
+            height: auto;
+            max-width: 260px; /* larger: gifs will display bigger on desktop */
+            border-radius: 0; /* gifs usually look best unrounded */
+            pointer-events: none; /* allow clicks to register on button, not the image */
+        }
+
+        .button {
+            background: transparent !important;
+            box-shadow: none !important;
+            padding: 0 !important;
+            border: none !important;
+            border-radius: 0 !important;
+        }
+
+        /* Ensure hover doesn't reintroduce visual effects */
+        .button:hover {
+            background: transparent !important;
+            box-shadow: none !important;
         }
 
         .hidden {
@@ -300,6 +332,7 @@
             .buttons {
                 flex-direction: column; /* Stack buttons vertically */
                 gap: 10px; /* Reduce gap between buttons */
+                align-items: center !important; /* center buttons horizontally on mobile */
             }
 
             .button {
@@ -307,9 +340,12 @@
                 text-align: center;
             }
 
-            .footer {
-                font-size: 0.9rem; /* Reduce footer font size */
+            /* cap gif size on small screens */
+            .button img {
+                max-width: 220px;
             }
+
+            /* footer font-size controlled in style.css */
 
             .studio-gallery-grid {
                 grid-template-columns: 1fr !important;
@@ -452,11 +488,44 @@
             border-radius: 5px;
             object-fit: cover;
         }
+        
+        /* Mobile-specific overrides to handle inline widths and make iframes responsive */
+        @media (max-width: 768px) {
+            /* Ensure gif buttons scale to their container and ignore inline width:200% */
+            .buttons .button img {
+                width: 100% !important;
+                max-width: 220px !important;
+                height: auto !important;
+            }
+
+            /* Force gallery items to fill available width (override inline styles) */
+            .gallery-item {
+                width: 100% !important;
+                max-width: 100% !important;
+                box-sizing: border-box;
+            }
+            /* Also target gallery-item elements that carry inline width styles */
+            .gallery-item[style] { width: 100% !important; }
+
+            /* Make all iframes responsive and keep a sensible aspect ratio */
+            .gallery-item iframe {
+                width: 100% !important;
+                height: auto !important;
+                aspect-ratio: 16 / 9;
+            }
+
+            /* For the b8 long-scroll container, remove fixed max-height on small screens so content flows naturally */
+            #b8-gallery .gallery-item {
+                max-height: none !important;
+                overflow-y: auto;
+                padding-right: 0 !important;
+            }
+        }
     </style>
 </head>
 <body>
 
-<div class="header">
+<div class="header glass-header">
     <h1><a href="/about">New Media</a></h1>
     <button class="hamburger">&#9776;</button>
     <div class="nav-menu">
@@ -479,18 +548,53 @@
     <!-- Left Side (Title, Text, & Buttons) -->
     <div class="left">
         <div class="title">New Media Experiments</div>
-        <div class="description">Tangible and/or spatial experiences</div>
+        <div class="description">Coded, tangible and/or spatial experiences</div>
         <!-- Buttons -->
         <div class="buttons">
-            <button class="button sims" onclick="showGallery('sims')">Metal Fabrication</button>
-            <button class="button interactive-panel" onclick="showGallery('interactive-panel')">Circuit Programming</button>
-            <button class="button full-video" onclick="showGallery('full-video')">360 Video</button>
-            <button class="button studio-visits" onclick="showGallery('studio')">Studio Visits</button>
+            <button class="button b8" onclick="showGallery('b8')">
+                <img src="images/b8.gif" alt="b8" style="width: 200%; height: auto; max-width: 250px;">
+            </button>
+            <button class="button sims" onclick="showGallery('sims')">
+                <img src="images/b4.gif" alt="b4" style="width: 200%; height: auto; max-width: 250px;">
+            </button>
+            <button class="button interactive-panel" onclick="showGallery('interactive-panel')">
+                <img src="images/b5.gif" alt="b5" style="width: 200%; height: auto; max-width: 250px;">
+            </button>
+            <button class="button full-video" onclick="showGallery('full-video')">
+                <img src="images/b6.gif" alt="b6" style="width: 200%; height: auto; max-width: 250px;">
+            </button>
+            <button class="button studio-visits" onclick="showGallery('studio')">
+                <img src="images/b7.gif" alt="b7" style="width: 200%; height: auto; max-width: 250px;">
+            </button>
         </div>
     </div>  <!-- End of left side -->
 
     <!-- Right Side Container -->
+     
     <div class="right">
+        <!-- B8 Gallery (Predicted-Systems preview) -->
+        <div id="b8-gallery" class="gallery-container hidden">
+            <div class="gallery-item" style="width: 600px;">
+                <iframe src="https://damaris-guzman.github.io/Predicted-Systems/swag.html" width="600" height="350" allowfullscreen style="border-radius:5px; border:none; display:block; margin-bottom:12px;"></iframe>
+                <div class="gallery-description">
+                    <h2 style="margin:0 0 8px 0;">Predicted-Systems</h2>
+                    <p>“You’re a product of your environment” once referred only to the three-dimensional world; now we curate that environment pixel by pixel. Every time I unlock my phone, apps launch precision-targeted nudges straight into my subconscious.</p>
+
+                    <p>This net-art archive displays only the Instagram ads I actually tapped, sorted into three pages: Music (events, songs), Fashion (merch, accessories), and Art practice-related consumption (art classes, events, creative products). For every ad I annotate the exact impulse that triggered the click so visitors can trace how visual cues, interests, and algorithms converge. Mapping those micro-decisions shows one thing clearly: the feed wins my clicks by weaponizing nostalgia. :3</p>
+
+                    <p>Every page is a hypercolored moodboard of my own tastes: glitter fonts, scene-kid pinks, SoundCloud embeds, Matrix green text, etc. In other words, the layout itself feels custom-skinned for me; a visual mirror of how social media algorithms dress their pitches in my favorite palettes and references, so I’ll trust them.</p>
+
+                    <p>By mimicking those tailored aesthetics, the site exposes the trick: personalization isn’t a warm hug, it’s a purchase nudge. The louder the UI says “this is so you,” the easier it is to slide a buy-button under your thumb. Here, every glitter border or retro meme becomes evidence of that seduction loop, proof that feeling special is often just step one in the conversion funnel.</p>
+
+                    <div style="text-align:center; margin-top:16px;">
+                        <a href="https://damaris-guzman.github.io/Predicted-Systems/" target="_blank" style="display:inline-block;">
+                            <img src="images/b9.gif" alt="b9" style="width:220px; height:auto; display:block; margin:0 auto;">
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <!-- Sims Gallery -->
         <div id="sims-gallery" class="gallery-container">
             <div class="gallery-box" id="metal-box" style="background: white; padding: 20px; box-shadow: 0 4px 8px rgba(0,0,0,0.2); border-radius: 5px; max-height: 400px; overflow-y: auto;">
@@ -599,8 +703,8 @@
     </div>
 </div>
 
-<div class="footer">
-    <p>© 2024 DAMARIS GUZMAN @GRILL0101</p>
+<div class="footer frosted-footer mt-auto">
+    <p class="mb-0"><i class="bi bi-c-circle me-1"></i>2025 DAMARIS GUZMAN <i class="bi bi-heart-fill ms-2" style="color: #ff6f91;"></i></p>
 </div>
 
 <script>
@@ -610,7 +714,7 @@
     }
 
     function showGallery(galleryId) {
-        const galleries = ['sims', 'interactive-panel', 'full-video', 'studio'];
+        const galleries = ['b8', 'sims', 'interactive-panel', 'full-video', 'studio'];
         galleries.forEach(id => document.getElementById(id + '-gallery').classList.add('hidden'));
         document.getElementById(galleryId + '-gallery').classList.remove('hidden');
     }
@@ -656,6 +760,8 @@
                 navMenu.style.flexDirection = 'column'; // ensure correct layout
             }
         });
+        // Show the net-art (b8) gallery by default on page load
+        if (typeof showGallery === 'function') showGallery('b8');
     });
 
     function scrollDownBox() {
@@ -708,6 +814,8 @@
         currentStudioIndex = (currentStudioIndex + 1) % studioImages.length;
         updateStudioCarouselImage();
     }
-</script>t>
+</script>
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-</html></html>
+</html>
