Update link in index.html to point to dream.html

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
             <div class="row g-3">
                 <div class="col-4">
                     <div class="grid-item glossy-grid-item">
-                        <a href="https://damaris-guzman.github.io/portfolio/currently.html">
+                        <a href="https://damaris-guzman.github.io/portfolio/dream.html">
                             <img src="https://damarisguzman.neocities.org/link-gifs/dream-gif-1.gif" alt="Every day I see my dream" class="w-100 h-100" style="object-fit: cover;">
                             <div class="overlay-text">Every day I see my dream</div>
                         </a>
