--- a/dream.html
+++ b/dream.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Every Day I See My Dream</title>
+  <title>Dreaming</title>
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -623,12 +623,12 @@
 
   <!-- Header -->
   <div class="header glass-header">
-    <h1><a href="/about">Currently working on...</a></h1>
+    <h1><a href="/about">Every day I see my dream</a></h1>
     <button class="hamburger" aria-label="Toggle menu">&#9776;</button>
     <nav class="nav-menu" aria-label="Main">
       <a href="https://damaris-guzman.github.io/portfolio/"><span class="icon">&#8962;</span> Home</a>
       <a href="https://damaris-guzman.github.io/portfolio/CV.html"><span class="icon">&#128196;</span> CV</a>
-      <a href="https://damaris-guzman.github.io/portfolio/currently.html"><span class="icon">&#128736;</span> Current Projects</a>
+      <a href="https://damaris-guzman.github.io/portfolio/dream.html"><span class="icon">&#128736;</span> Current Projects</a>
       <a href="https://damaris-guzman.github.io/portfolio/teaching.html"><span class="icon">&#127891;</span> Teaching</a>
       <a href="https://damaris-guzman.github.io/portfolio/newmaris.html"><span class="icon">&#127912;</span> New Media</a>
       <a href="https://damaris-guzman.github.io/portfolio/video.html"><span class="icon">&#127916;</span> Video Editing</a>
@@ -648,8 +648,7 @@
         <div class="col-lg-4 col-md-12">
           <div class="card mb-4 frosted-sidebar">
             <div class="card-body">
-              <h2 class="card-title">Every Day I See My Dream</h2>
-              <p class="card-text text-muted">Where does the dream end and the feed begin?</p>
+              <h2 class="card-title">Where does the dream end and the feed begin?</h2>
 
       <div class="concept-box">
         <div class="concept-content">
@@ -1179,3 +1178,4 @@
   </script>
 </body>
 </html>
+
