--- a/dream.html
+++ b/dream.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -677,12 +676,11 @@
                 Components to the project ▼
                 <div class="hidden-text" id="components-text">
                   <div style="padding-left:0; margin:0;">
-                    <div>★ Meditative AE simulations</div>
-                    <div>★ Remixed using Resolume Avenue</div>
+                    <div>★ Live-thru-me: Meditative AE simulations remixed using Resolume Avenue</div>
                     <div style="padding-left:20px; margin:8px 0 0;">➜ Webcam enabled</div>
                     <div>★ Ctrl1 (Arduino Prototype)</div>
-                    <div>★ 3D Printed Lockets (2 variations)</div>
-                    <div>★ Metal Casted Locket</div>
+                    <div>★ Unlock-it and Unlock-me: 3D Printed Lockets</div>
+                    <div>★ Unlock-casted: Metal Casted Locket</div>
                     <div>★ Flight of Promise - Projection Mapping</div>
                   </div>
                 </div>
@@ -720,6 +718,11 @@
                    onclick="window.open('https://www.instagram.com/p/DR5bPvikl0w/?img_index=1', '_blank')"
                    style="margin-top:10px; text-align:center; background-color:#fff; border:2px solid var(--pink-2); border-radius:10px; padding:15px; cursor:pointer;">
                 Exhibited in the Black Gallery in the Art building @ SJSU 11/12/2025 - 11/20/2025
+              </div>
+              <div style="text-align:center; margin-top:15px;">
+                <a href="https://newart.city/show/everyday-isee-my-dream" target="_blank" class="btn btn-primary glossy-btn" style="background: linear-gradient(135deg, #ff8fb2 0%, #cf77a4 100%); border: none; color: #fff; font-weight: bold; box-shadow: 0 2px 8px rgba(207,119,164,0.15); border-radius: 8px; padding: 12px 28px; font-size: 1.1rem; transition: background 0.3s;">
+                  Click to visit the virtual gallery
+                </a>
               </div>
             </div>
           </div>
@@ -870,7 +873,7 @@
           <button class="nav-arrow nav-arrow-right" onclick="nextImage()">›</button>
         </div>
         <div class="gallery-description">
-          <p><strong>Metal Cast (Bronze)</strong></p>
+          <p><strong>Unlock-casted</strong></p>
           <p>I also 3D printed miniature versions of the locket as mold to metal cast. Pretty epic right? I got invited to share them for <a href="https://www.icasanjose.org/upcoming-exhibitions/data_trust/?utm_source=San+Jose+ICA+News+Blast&utm_campaign=cfa71ae81f-EMAIL_CAMPAIGN_2023_10_16_08_15_COPY_01&utm_medium=email&utm_term=0_-5a0f930f36-97939396" target="_blank" style="color: var(--pink-2); font-weight: bold;">Stephanie Dinkin's ICA show, Data Trust</a>, so here’s what they looked like in the show. They weren’t actually done as some pieces still needed to be cut off and polished, but it made it to the show, nonetheless.</p>
           <p>The immersive simulations are visualized in a video I was working on to accompany all these components at once; the locket stores the immersive simulations that visualize embodiments of human–AI fusion, where flesh and digital code fuse as one. By localizing them inside a wearable object, the work compresses vast networks of computation into a personal relic.</p>
           <p>If the simulations represent a fusion of AI, internet culture, and human embodiment, then the locket becomes a symbolic “interface-organ” where the user is fused with their data. Wearing it enacts the merger: the body is no longer distinct from the network but bound to it.</p>
