--- a/CV.html
+++ b/CV.html
@@ -89,7 +89,7 @@
                 <div class="cv-details">
                     <h4>Master of Fine Arts in Digital Media</h4>
                     <p class="location">San José State University</p>
-                    <p>3rd Semester | Teaching Associate</p>
+                    <p>2nd year | Teaching Associate</p>
                 </div>
             </div>
 
