--- a/CV.html
+++ b/CV.html
@@ -164,6 +164,16 @@
                  </div>
 
                  <div class="cv-entry">
+                     <div class="cv-dates">Mar 2021 - Mar 2022</div>
+                     <div class="cv-details">
+                         <h4>Retail Operations Associate</h4>
+                         <p class="location">Ross Stores, Inc. · Full-time · On-site</p>
+                         <p>I managed customer service and cash transactions with speed and accuracy, consistently earning the highest cashier processing score (CPU) in the store; 120%–130%. I also supported store security operations when needed, assisting with loss-prevention awareness and maintaining a safe environment for customers and staff. In addition to working the dressing rooms and stocking in the back, I regularly handled responsibilities on the sales floor, ensuring merchandise was organized, accessible, and visually appealing. These roles strengthened my ability to multitask, remain calm under pressure, and provide reliable support across multiple departments.</p>
+                         <p class="skills">Skills: Customer Service, Cash Handling, Point of Sale, Inventory Management, Loss Prevention</p>
+                     </div>
+                 </div>
+
+                 <div class="cv-entry">
                      <div class="cv-dates">May 2018 - Oct 2018</div>
                      <div class="cv-details">
                          <h4>Key Production Assistant and Video Editor</h4>
@@ -179,6 +189,28 @@
                          <h4>Social Media Content Creator</h4>
                          <p class="location">Project Pollinate · Internship · Hybrid</p>
                          <p>I filmed and edited media to enlighten viewers on what the program had to offer. I filmed and photographed events, advertisements, interviews, etc.</p>
+                     </div>
+                 </div>
+
+                 <h3 style="margin-top: 20px; margin-bottom: 15px; color: #cf77a4; border-top: 1px solid #E0E0E0; padding-top: 15px;">Volunteer Experience</h3>
+
+                 <div class="cv-entry">
+                     <div class="cv-dates">Nov 2017 - Apr 2018</div>
+                     <div class="cv-details">
+                         <h4>Line Cook</h4>
+                         <p class="location">Teen Kitchen · Health</p>
+                         <p>Prepared and assisted in cooking nutritious, health-conscious meals for cancer patients and individuals with dietary restrictions. Supported kitchen operations by following food safety standards, maintaining a clean workspace, and working collaboratively with a team to ensure meals were prepared accurately and on time.</p>
+                         <p class="skills">Skills: Food Preparation, Food Safety, Kitchen Operations, Teamwork</p>
+                     </div>
+                 </div>
+
+                 <div class="cv-entry">
+                     <div class="cv-dates">Jan 2007 - Jun 2015</div>
+                     <div class="cv-details">
+                         <h4>Publisher / Auxiliary Pioneer</h4>
+                         <p class="location">Jehovah's Witnesses · Education</p>
+                         <p>Regularly led door-to-door and public outreach campaigns, engaging diverse audiences, offering educational literature, and coordinating home visits for follow-up discussions. Elevated to Auxiliary Pioneer, committing increased volunteer hours and collaborating closely with seasoned pioneers and former missionaries. The role honed my public-speaking, interpersonal communication, research, and time-management skills through tailored presentations, schedule planning, and stewardship of a substantial volunteer workload.</p>
+                         <p class="skills">Skills: Public Speaking, Interpersonal Communication, Research, Time Management, Leadership</p>
                      </div>
                  </div>
              </div>
