--- a/about.html
+++ b/about.html
@@ -4,6 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About Me</title>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Bootstrap Icons -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+  <!-- Glossy Theme -->
+  <link rel="stylesheet" href="glossy-theme.css">
+  <link rel="stylesheet" href="./style.css">
   <style>
     @font-face {
       font-family: 'DepartureMono';
@@ -16,8 +23,8 @@
       margin: 0;
       padding: 0;
       background-color: #F9F9F9;
-      display: flex;
-      flex-direction: column;
+      /* display: flex; */
+      /* flex-direction: column; */
       min-height: 100vh;
       overflow-x: hidden;  /* Prevents horizontal scroll */
     }
@@ -233,18 +240,7 @@
       height: 40px;
     }
 
-    .footer {
-      box-sizing: border-box;
-      display: block;
-      width: 100%; /* Full width */
-      background-color: #ffbcd0;
-      color: white;
-      text-align: center;
-      padding: 20px; /* Match header's padding */
-      font-weight: bold;
-      text-transform: uppercase;
-      margin-top: auto;
-    }
+    /* footer styling is centralized in style.css */
 
     @media (max-width: 768px) {
       .container {
@@ -294,19 +290,19 @@
     });
   </script>
 </head>
-<body>
-  <div class="header">
-      <h1><a href="/about">About Me ★~(◠‿◕✿)</a></h1>
+<body class="animated-bg">
+  <div class="header glass-header">
+        <h1><a href="/about">New Page</a></h1>
       <button class="hamburger">&#9776;</button>
       <div class="nav-menu">
-          <a href="https://damaris-guzman.github.io/portfolio/"><span class="icon">&#8962;</span> Home</a>
-          <a href="https://damaris-guzman.github.io/portfolio/about.html"><span class="icon">&#128100;</span> About me</a>
-          <a href="https://damaris-guzman.github.io/portfolio/currently.html"><span class="icon">&#128736;</span> Current Projects</a>
-          <a href="https://damaris-guzman.github.io/portfolio/teaching.html"><span class="icon">&#127891;</span> Teaching</a>
-          <a href="https://damaris-guzman.github.io/portfolio/newmaris.html"><span class="icon">&#127912;</span> New Media</a>
-          <a href="https://damaris-guzman.github.io/portfolio/video.html"><span class="icon">&#127916;</span> Video Editing</a>
-          <a href="https://damaris-guzman.github.io/portfolio/3danimation.html"><span class="icon">&#128187;</span> 3D Animation</a>
-          <a href="https://damaris-guzman.github.io/portfolio/archive.html"><span class="icon">&#128194;</span> Archive</a>
+        <a href="https://damaris-guzman.github.io/portfolio/"><span class="icon">&#8962;</span> Home</a>
+        <a href="https://damaris-guzman.github.io/portfolio/CV.html"><span class="icon">&#128196;</span> CV</a>
+        <a href="https://damaris-guzman.xyz/dream.html"><span class="icon">&#127775;</span> My Dream</a>
+        <a href="https://damaris-guzman.github.io/portfolio/newmaris.html"><span class="icon">&#128736;</span> New Media</a>
+        <a href="https://damaris-guzman.github.io/portfolio/teaching.html"><span class="icon">&#127891;</span> Teaching</a>
+        <a href="https://damaris-guzman.github.io/portfolio/video.html"><span class="icon">&#127916;</span> Video Editing</a>
+        <a href="https://damaris-guzman.github.io/portfolio/3danimation.html"><span class="icon">&#128187;</span> 3D Animation</a>
+        <a href="https://damaris-guzman.github.io/portfolio/archive.html"><span class="icon">&#128194;</span> Archive</a>
       </div>
   </div>
 
@@ -400,8 +396,10 @@ assumptions, and perhaps reclaiming a bit of agency in the process.</p>
 </div>
 
 <div class="footer">
-    <p>© 2025 DAMARIS GUZMAN @GRILL0101</p>
+  <p>© 2025 DAMARIS GUZMAN @GRILL0101</p>
 </div>
 
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
