--- a/video.html
+++ b/video.html
@@ -12,6 +12,11 @@
   <link rel="stylesheet" href="glossy-theme.css">
   <link rel="stylesheet" href="style.css">
   <style>
+        html, body {
+          min-height: 100vh;
+          height: auto;
+          overflow-y: auto;
+        }
     @font-face {
       font-family: 'DepartureMono';
       src: url('https://humantooth.neocities.org/fonts/DepartureMono.woff') format('woff');
@@ -24,10 +29,7 @@
       margin: 0;
       padding: 0;
       background-color: #f0f0f0;
-      display: flex;
-      flex-direction: column;
       min-height: 100vh;
-      overflow-x: hidden;
     }
 
     /* Header */
@@ -239,21 +241,22 @@
     }
   </style>
 </head>
-<body>
+<body class="animated-bg">
 
   <div class="header glass-header">
-    <h1><a href="/about">Video Editing</a></h1>
-    <button class="hamburger">&#9776;</button>
-    <div class="nav-menu">
-      <a href="https://damaris-guzman.github.io/portfolio/"><span class="icon">&#8962;</span> Home</a>
-      <a href="https://damaris-guzman.github.io/portfolio/CV.html"><span class="icon">&#128196;</span> CV</a>
-      <a href="https://damaris-guzman.xyz/dream.html"><span class="icon">&#127775;</span> My Dream</a>
-      <a href="https://damaris-guzman.github.io/portfolio/teaching.html"><span class="icon">&#127891;</span> Teaching</a>
-      <a href="https://damaris-guzman.github.io/portfolio/newmaris.html"><span class="icon">&#128736;</span> New Media</a>
-      <a href="https://damaris-guzman.github.io/portfolio/video.html"><span class="icon">&#127916;</span> Video Editing</a>
-      <a href="https://damaris-guzman.github.io/portfolio/3danimation.html"><span class="icon">&#128187;</span> 3D Animation</a>
-      <a href="https://damaris-guzman.github.io/portfolio/archive.html"><span class="icon">&#128194;</span> Archive</a>
-    </div>
+  <h1><a>Video</a></h1>
+  <button class="hamburger">&#9776;</button>
+  <div class="nav-menu">
+    <a href="https://damaris-guzman.github.io/portfolio/"><span class="icon">&#8962;</span> Home</a>
+    <a href="https://damaris-guzman.github.io/portfolio/CV.html"><span class="icon">&#128196;</span> CV</a>
+    <a href="https://damaris-guzman.xyz/dream.html"><span class="icon">&#127775;</span> My Dream</a>
+    <a href="https://damaris-guzman.github.io/portfolio/netart.html"><span class="icon">&#128187;</span> Net Art</a>
+    <a href="https://damaris-guzman.github.io/portfolio/data-trust.html"><span class="icon">&#127795;</span> ICA - Data Trust</a>
+    <a href="https://damaris-guzman.github.io/portfolio/teaching.html"><span class="icon">&#127891;</span> Teaching</a>
+    <a href="https://damaris-guzman.github.io/portfolio/video.html"><span class="icon">&#127916;</span> Video Editing</a>
+    <a href="https://damaris-guzman.github.io/portfolio/3danimation.html"><span class="icon">&#127744;</span> 3D Animation</a>
+    <a href="https://damaris-guzman.github.io/portfolio/archive.html"><span class="icon">&#128194;</span> Archive</a>
+  </div>
   </div>
 
   <!-- Secondary Section -->
